# homebrew-autokyo

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
Formula/: autokyo.rb  autokyo.rb.template
autokyo/: __init__.py  actions.py  cli.py  config.py  mcp_server.py  orchestrator.py  page_state.py  pdf_builder.py  photos_export.py  service.py  session_store.py  setup_flow.py
scripts/: publish_release.sh  render_homebrew_formula.py
