[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autokyo"
version = "0.1.4"
description = "macOS local automation tool for page-by-page viewer workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "plain127" }
]

[project.scripts]
autokyo = "autokyo.cli:main"

[tool.setuptools.packages.find]
include = ["autokyo"]
